# one-SLAM-2-rule-them-all

./: README.md
environment_recognition/: README.md
environment_recognition/env_recognition/: CMakeLists.txt  package.xml
environment_recognition/env_recognition/include/env_recognition/: recognition_depth.h  recognition_lidar.h  recognition_rgb.h
environment_recognition/env_recognition/launch/: recognition.launch  recognition_depth.launch  recognition_lidar.launch  recognition_rgb.launch
environment_recognition/env_recognition/scripts/: color_clustering.py
environment_recognition/env_recognition/src/: recognition_depth.cpp  recognition_depth_node.cpp  recognition_lidar.cpp  recognition_lidar_node.cpp  recognition_rgb.cpp  recognition_rgb_node.cpp
maps/gmapping/: config.xml  indoors_with_nothing.pgm  indoors_with_nothing.yaml  indoors_with_nothing_asphalt_plane.pgm  outdoors_sparse.pgm
maps/hector/: indoors_with_rgb_features.yaml  outdoors_dense_v2.yaml  outdoors_sparse.yaml
maps/karto/: karto_indoor_rgb_distance_features.pgm  karto_indoor_rgb_distance_features.yaml  karto_indoors_with_nothing.yaml  karto_indoors_with_nothing_asphalt_plane.yaml  karto_outdoors_dense.pgm  karto_outdoors_dense.yaml
maps/rtabmap/: rtabmap_indoor_darkness_features.pgm  rtabmap_indoor_distance_features.pgm  rtabmap_indoor_distance_features.yaml  rtabmap_indoor_rgb_distance_features.pgm  rtabmap_indoor_with_nothing_asphalt.pgm  rtabmap_indoor_with_nothing_asphalt.yaml  rtabmap_indoor_with_nothing_mud.pgm  rtabmap_indoor_with_nothing_mud.yaml  rtabmap_indoor_with_rgb_features.yaml  rtabmap_indoors_with_much_light.pgm  rtabmap_outdoors_sparse.pgm
models/Indoors_with_RGB_features/: model.sdf
models/Surround/: model.config
models/Walls and Doors with colors/: model.config  model.sdf
models/colourful_corridors/: model.config  model.sdf
models/outdoors_surrounding_wall/: model.sdf
models/ramp/: model.sdf
models/rgb_walls_and_doors/: model.sdf
models/unit_box_0/: model.sdf
models/unit_cylinder_0/: model.sdf
models/white_walls_and_doors/: model.config
octomap_evaluation/: CMakeLists.txt  README.md  package.xml
octomap_evaluation/config/: evaluation_parameters.yaml  icp_config.yaml
octomap_evaluation/include/octomap_evaluation/: calculate_metric.h  icp.h  octomap_to_pc.h
octomap_evaluation/launch/: octomap_evaluation.launch  octomap_to_point_cloud.launch  point_cloud_icp.launch
octomap_evaluation/maps/: indoors.bt  indoors.bt.pcd  indoors.ot_indoors_v2.ot_icp.pcd  indoors_v2.bt  indoors_v2.bt.pcd  indoors_v2.ot  indoors_v2.ot.pcd
octomap_evaluation/src/: calculate_metric.cpp  calculate_metric_node.cpp  icp.cpp  icp_node.cpp  octomap_evaluation.cpp  octomap_to_pc.cpp  octomap_to_pc_node.cpp  transform_point_cloud.py
turlebot_real/maps/gmapping/: gmapping_lab_low_speed.pgm  gmapping_lab_low_speed.yaml  gmapping_lab_normal_speed.pgm  gmapping_lab_normal_speed.yaml  gmapping_vergina.pgm  gmapping_vergina.yaml
turlebot_real/maps/hector/hector_with_odom/: hector_lab_normal_speed.yaml
turlebot_real/maps/hector/hector_without_odom/: hector_lab_normal_speed.yaml  hector_vergina.yaml
turlebot_real/maps/karto/: karto_lab_normal_speed.pgm  karto_lab_normal_speed.yaml  karto_vergina.pgm  karto_vergina.yaml
turtlebot_simulations/: README.md
turtlebot_simulations/evaluations/: 2D SLAM evaluations.ods  OGM evaluations.ods
turtlebot_simulations/evaluations/Matching after RANSAC/Indoors with nothing/: karto - gmapping
turtlebot_simulations/evaluations/Matching after RANSAC/Indoors with nothing & asphalt/: karto - gmapping
turtlebot_simulations/maps/gmapping/: indoor_with_distance_features.pgm  indoors_with_nothing_asphalt_plane.yaml  indoors_with_nothing_mud_plane.pgm  indoors_with_nothing_mud_plane.yaml  outdoors_dense.pgm  outdoors_dense.yaml  outdoors_sparse.yaml
turtlebot_simulations/maps/hector/: indoor_darkness_features.yaml  indoor_with_distance_features.yaml  indoors_with_much_light_features.yaml  indoors_with_nothing_mud_plane.yaml
turtlebot_simulations/maps/karto/: karto_indoors_with_nothing.pgm  karto_indoors_with_nothing_asphalt_plane.pgm  karto_indoors_with_nothing_mud_plane.pgm  karto_indoors_with_nothing_mud_plane.yaml
turtlebot_simulations/maps/rtabmap/: indoor_rgb_distance_features.bt  rtabmap_indoor_darkness_features.yaml  rtabmap_indoor_rgb_distance_features.yaml  rtabmap_indoor_with_nothing.pgm  rtabmap_indoor_with_nothing.yaml  rtabmap_indoor_with_rgb_features.pgm  rtabmap_indoors_with_much_light.yaml  rtabmap_outdoors_dense.pgm  rtabmap_outdoors_dense.yaml  rtabmap_outdoors_sparse.yaml
turtlebot_simulations/models/Indoors_with_RGB_features/: model.config
turtlebot_simulations/models/Surround/: model.sdf
turtlebot_simulations/models/Surround_2_levels/: model.config  model.sdf
turtlebot_simulations/models/outdoors_surrounding_wall/: model.config
turtlebot_simulations/models/rgb_walls_and_doors/: model.config
turtlebot_simulations/models/white_corridors/: model.config  model.sdf
turtlebot_simulations/models/white_walls_and_doors/: model.sdf
turtlebot_simulations/worlds/: indoor_darkness_features.world  indoor_rgb_distance_features.world  indoors_with_much_lght_features.world  indoors_with_nothing_asphalt_plane.world  indoors_with_nothing_mud_plane.world  indoors_with_rgb_features.world  outdoors_sparse.world
worlds/: indoor_darkness_features.world  indoor_rgb_distance_features.world  indoors_with_nothing.world  outdoors_dense.world  outdoors_dense_v2.world  outdoors_sparse.world
